# cognitive-search-engine

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh.md  ROADMAP.md  ROADMAP.zh.md  ZN_EN_RULES.md  coordination.yaml  pyproject.toml  search_tribolodon.py  search_tribolodon_v2.py  search_tribolodon_v3.py  search_tribolodon_v4.py  search_tribolodon_v5.py
.evolution/: evolution-log.jsonl
.reasonix/: clash-proxy-rule.md  config.yaml
config/: agent.yaml  bilingual_ecology_dict.json  cnki_cookies.json  component_registry.yaml  coordination.yaml  database_catalog.yaml  engine_registry.yaml  evolution.yaml  fishery_glossary_wikipedia.json  gbt8588_terms.json  mcp_servers.yaml  search_rules.yaml  species_graph.yaml  stv_protocol.yaml  tao.yaml  tools.json  wuxing.yaml
data/: gbt8588_2024_raw.txt  mpc_state.json
docs/: ARCHITECTURE.md  DIMENSIONAL_EVOLUTION.md  STV_TRIANGLE_ARCHITECTURE.md  UNIFIED_EVOLUTION.md  UNIFIED_SEARCH_PROTOCOL.md
scripts/: __init__.py  _batch_search.py  _emergence_real_data.py  _test_emergence.py  cnki_xue_search.py  credibility_scorer.py  credibility_scorer.py.partial  interactive_search.py  kb_to_graph_sync.py  parse_wiki_glossary.py  reasonix_parallel_search.py  rebuild_glossary.py  search_api.py  self_evolve.py
skills/: chinese-academic-search.md  cognitive-species-search.md  graph-search-engine.md  self-evolve.md
src/: __init__.py  _utils.py  adapter.py  adapter.py.partial  agent_core.py  agent_judge.py  catalog_loader.py  catalog_loader.py.partial  citation.py  claim_verifier.py  (+33 more)
(+33 files in other folders)
