[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cognitive-search-engine"
version = "5.7.0"
description = "多引擎物种文献搜索验证引擎 — BDI + ReAct + 权威评分 + Hub-and-Spoke 图谱搜索"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.25",
    "requests>=2.31",
]

# === P0/P1/P2 待添加依赖 ===
# sentence-transformers>=2.2   # 向量嵌入搜索 (P0.2)
# networkx>=3.0               # 图查询引擎 (P1.2)
# pygbif>=2.0                 # GBIF API (P0.1)
# chromadb>=0.5               # 向量数据库 (P1)
# neo4j>=5.0                  # 图数据库 (P2.1)

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "scripts"]
python_files = ["test_*.py"]
